# modern_fortran_book

./: .gitignore  .readthedocs.yaml  README.md
docs/: requirements.txt
docs/source/: app_compiling_fortran.rst  app_exercises.rst  chapter_fortran.rst  chapter_fortran_projects.rst  chapter_fortran_python.rst  chapter_qtcreator.rst  conf.py  fix_latex.py  index.rst  intro.rst  references.rst
gb/arr_expr1/: CMakeLists.txt
images/: error_handling.graffle  io_rewind_backspace_endfile.graffle  qt_create_project_1.pxm  qtcreator_build_app.ai  qtcreator_main_window.ai
images/qt_fortran_highlight.graffle/: data.plist
images/qtcreator_main_window.graffle/: data.plist  image1.tiff
source/: CMakeLists.txt  compile_commands.json  configure.cmd  configure_progsci.cmd  debugging_sample.f90  debugging_sample_correct.f90  setup_env.sh
source/allocatable_dummy/: CMakeLists.txt  main.f90
source/allocatable_function/: CMakeLists.txt  main.f90
source/arr_expressions/: CMakeLists.txt  arr_expr1.f90  utils.f90
source/arr_slices/: CMakeLists.txt  arr_slices1.f90  datatypes.f90  utils.f90
source/array_features/: CMakeLists.txt  array1.f90
source/atan2/: fatan2.pas  fmath.pas  main.pas  vatan2.f90
source/beam/: beam.f90  beambc.pas  beamcalc.pas  beamdata.pas  beamdraw.pas  beammat.pas  beammodel.pas  beamprop.pas  beamresult.pas  calc.f90  main.pas
source/c_interop/: main.f90
source/case/: CMakeLists.txt  case.f90
source/cmake_examples/conditionals/: CMakeLists.txt
source/extmod/: cext.c  (+4 more)
source/lapack/: CMakeLists.txt  linalg.f90  main.f90  main2.f90  utils.f90
(+125 files in other folders)
