cmake_minimum_required(VERSION 2.6)
project(multiple)
enable_language(Fortran)

if (UNIX)
	message("This is a Unix build.")
	if (APPLE)
		message("This is Apple build.")
	else (APPLE)
		if (LINUX)
			message("This is a Linux build.")
		else (LINUX)
			message("This is a unknown Unix build.")
		endif (LINUX)
	endif (APPLE)
else (UNIX)
	message("This is not a Unix build.")
	if (WIN32)
		message("This is a Windows build.")
	else (WIN32)
		message("This is an unknown build.")
	endif (WIN32)
endif (UNIX)

add_executable(multiple myprog.f90 mymodule.f90)